--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ modules.builtin
 Module.symvers
 *.dwo
 *.su
+*.c.[012]*.*
 
 #
 # Top-level generic files
@@ -62,10 +63,11 @@ Module.symvers
 /tar-install/
 
 #
-# git files that we don't want to ignore even it they are dot-files
+# git files that we don't want to ignore even if they are dot-files
 #
 !.gitignore
 !.mailmap
+!.cocciconfig
 
 #
 # Generated include files
@@ -97,12 +99,6 @@ ID
 *.orig
 *~
 \#*#
-*.old
-*.bak
-*.log
-*.org
-*.rej
-*.tmp
 
 #
 # Leavings from module signing
